--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <div class="carousel-inner slider-inner">
           <div class="carousel-item active slider">
             <div class="row">
-              <div class="col-md-6"  style="padding-right: 0px;">
+              <div class="col-md-6"  style="padding-right: 0px; height: 650px">
                 <img class="d-block w-100" src="images/photo-1542644425-bc949ec841a4.avif" alt="First slide">
               </div>
               <div class="col-md-6">
@@ -339,7 +339,7 @@
           </div>
           <div class="carousel-item slider">
             <div class="row">
-              <div class="col-md-6 img" style="padding-right: 0px;">
+              <div class="col-md-6 img" style="padding-right: 0px; height: 650px">
                 <img class="d-block w-100" src="images/photo-1571367034861-e6729ad9c2d5.avif" alt="Second slide">
               </div>
               <div class="col-md-6">
@@ -352,7 +352,7 @@
           </div>
           <div class="carousel-item slider">
             <div class="row">
-              <div class="col-md-6 img" style="padding-right: 0px;">
+              <div class="col-md-6 img" style="padding-right: 0px; height: 650px">
                 <img class="d-block w-100" src="images/photo-1589169011402-8b2cbd1ee593.avif" alt="Third slide">
               </div>
               <div class="col-md-6">
@@ -365,7 +365,7 @@
           </div>
           <div class="carousel-item slider">
             <div class="row">
-              <div class="col-md-6 img" style="padding-right: 0px;">
+              <div class="col-md-6 img" style="padding-right: 0px; height: 650px">
                 <img class="d-block w-100" src="images/photo-1595502124338-950db27ea1c7.avif" alt="Fourth slide">
               </div>
               <div class="col-md-6">
@@ -378,7 +378,7 @@
           </div>
           <div class="carousel-item slider">
             <div class="row">
-              <div class="col-md-6 img" style="padding-right: 0px;">
+              <div class="col-md-6 img" style="padding-right: 0px; height: 650px">
                 <img class="d-block w-100" src="images/photo-1601317781780-646aabae8a93.avif" alt="Fifth slide">
               </div>
               <div class="col-md-6">
@@ -391,7 +391,7 @@
           </div>
           <div class="carousel-item slider">
             <div class="row">
-              <div class="col-md-6 img" style="padding-right: 0px;">
+              <div class="col-md-6 img" style="padding-right: 0px; height: 650px">
                 <img class="d-block w-100" src="images/photo-1607189200597-4d0923ef98c6.avif" alt="Sixth slide">
               </div>
               <div class="col-md-6">
@@ -404,7 +404,7 @@
           </div> 
           <div class="carousel-item slider">
             <div class="row">
-              <div class="col-md-6 img" style="padding-right: 0px;">
+              <div class="col-md-6 img" style="padding-right: 0px; height: 650px">
                 <img class="d-block w-100" src="images/photo-1620324122918-6e47aa23133c.avif" alt="Seventh slide">
               </div>
               <div class="col-md-6">
