--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
         <div class="carousel-inner slider-inner">
           <div class="carousel-item active slider">
             <div class="row">
-              <div class="col-md-6"  style="padding-right: 0px; height: 650px">
-                <img class="d-block w-100" src="images/photo-1542644425-bc949ec841a4.avif" alt="First slide">
+              <div class="col-md-6"  style="padding-right: 0px;">
+                <img class="d-block w-100" src="images/photo-1542644425-bc949ec841a4.avif" alt="First slide" height: "650px">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -339,8 +339,8 @@
           </div>
           <div class="carousel-item slider">
             <div class="row">
-              <div class="col-md-6 img" style="padding-right: 0px; height: 650px">
-                <img class="d-block w-100" src="images/photo-1571367034861-e6729ad9c2d5.avif" alt="Second slide">
+              <div class="col-md-6 img" style="padding-right: 0px;">
+                <img class="d-block w-100" src="images/photo-1571367034861-e6729ad9c2d5.avif" alt="Second slide" height: "650px">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -352,8 +352,8 @@
           </div>
           <div class="carousel-item slider">
             <div class="row">
-              <div class="col-md-6 img" style="padding-right: 0px; height: 650px">
-                <img class="d-block w-100" src="images/photo-1589169011402-8b2cbd1ee593.avif" alt="Third slide">
+              <div class="col-md-6 img" style="padding-right: 0px;">
+                <img class="d-block w-100" src="images/photo-1589169011402-8b2cbd1ee593.avif" alt="Third slide" height: "650px">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -365,8 +365,8 @@
           </div>
           <div class="carousel-item slider">
             <div class="row">
-              <div class="col-md-6 img" style="padding-right: 0px; height: 650px">
-                <img class="d-block w-100" src="images/photo-1595502124338-950db27ea1c7.avif" alt="Fourth slide">
+              <div class="col-md-6 img" style="padding-right: 0px;">
+                <img class="d-block w-100" src="images/photo-1595502124338-950db27ea1c7.avif" alt="Fourth slide" height: "650px">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -378,8 +378,8 @@
           </div>
           <div class="carousel-item slider">
             <div class="row">
-              <div class="col-md-6 img" style="padding-right: 0px; height: 650px">
-                <img class="d-block w-100" src="images/photo-1601317781780-646aabae8a93.avif" alt="Fifth slide">
+              <div class="col-md-6 img" style="padding-right: 0px;">
+                <img class="d-block w-100" src="images/photo-1601317781780-646aabae8a93.avif" alt="Fifth slide" height: "650px">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -391,8 +391,8 @@
           </div>
           <div class="carousel-item slider">
             <div class="row">
-              <div class="col-md-6 img" style="padding-right: 0px; height: 650px">
-                <img class="d-block w-100" src="images/photo-1607189200597-4d0923ef98c6.avif" alt="Sixth slide">
+              <div class="col-md-6 img" style="padding-right: 0px;">
+                <img class="d-block w-100" src="images/photo-1607189200597-4d0923ef98c6.avif" alt="Sixth slide" height: "650px">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -404,8 +404,8 @@
           </div> 
           <div class="carousel-item slider">
             <div class="row">
-              <div class="col-md-6 img" style="padding-right: 0px; height: 650px">
-                <img class="d-block w-100" src="images/photo-1620324122918-6e47aa23133c.avif" alt="Seventh slide">
+              <div class="col-md-6 img" style="padding-right: 0px;">
+                <img class="d-block w-100" src="images/photo-1620324122918-6e47aa23133c.avif" alt="Seventh slide" height: "650px">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
