--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           <div class="carousel-item active slider">
             <div class="row">
               <div class="col-md-6"  style="padding-right: 0px;">
-                <img class="d-block w-100" src="images/photo-1542644425-bc949ec841a4.avif" alt="First slide" height: "650px">
+                <img class="d-block w-100" src="images/photo-1542644425-bc949ec841a4.avif" alt="First slide" height: "650">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -340,7 +340,7 @@
           <div class="carousel-item slider">
             <div class="row">
               <div class="col-md-6 img" style="padding-right: 0px;">
-                <img class="d-block w-100" src="images/photo-1571367034861-e6729ad9c2d5.avif" alt="Second slide" height: "650px">
+                <img class="d-block w-100" src="images/photo-1571367034861-e6729ad9c2d5.avif" alt="Second slide" height: "650">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -353,7 +353,7 @@
           <div class="carousel-item slider">
             <div class="row">
               <div class="col-md-6 img" style="padding-right: 0px;">
-                <img class="d-block w-100" src="images/photo-1589169011402-8b2cbd1ee593.avif" alt="Third slide" height: "650px">
+                <img class="d-block w-100" src="images/photo-1589169011402-8b2cbd1ee593.avif" alt="Third slide" height: "650">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -366,7 +366,7 @@
           <div class="carousel-item slider">
             <div class="row">
               <div class="col-md-6 img" style="padding-right: 0px;">
-                <img class="d-block w-100" src="images/photo-1595502124338-950db27ea1c7.avif" alt="Fourth slide" height: "650px">
+                <img class="d-block w-100" src="images/photo-1595502124338-950db27ea1c7.avif" alt="Fourth slide" height: "650">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -379,7 +379,7 @@
           <div class="carousel-item slider">
             <div class="row">
               <div class="col-md-6 img" style="padding-right: 0px;">
-                <img class="d-block w-100" src="images/photo-1601317781780-646aabae8a93.avif" alt="Fifth slide" height: "650px">
+                <img class="d-block w-100" src="images/photo-1601317781780-646aabae8a93.avif" alt="Fifth slide" height: "650">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -392,7 +392,7 @@
           <div class="carousel-item slider">
             <div class="row">
               <div class="col-md-6 img" style="padding-right: 0px;">
-                <img class="d-block w-100" src="images/photo-1607189200597-4d0923ef98c6.avif" alt="Sixth slide" height: "650px">
+                <img class="d-block w-100" src="images/photo-1607189200597-4d0923ef98c6.avif" alt="Sixth slide" height: "650">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -405,7 +405,7 @@
           <div class="carousel-item slider">
             <div class="row">
               <div class="col-md-6 img" style="padding-right: 0px;">
-                <img class="d-block w-100" src="images/photo-1620324122918-6e47aa23133c.avif" alt="Seventh slide" height: "650px">
+                <img class="d-block w-100" src="images/photo-1620324122918-6e47aa23133c.avif" alt="Seventh slide" height: "650">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
