--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Nursin</title>
-     <link rel="icon" type="image/x-icon" href="images/NursIn logo.png">
+     <link rel="icon" type="image/x-icon" href="images/Screenshot 2023-05-17 194902.png">
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.min.css">
