--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="background-content">
         <h2 style="padding-bottom: 40px;">We have Best Medicare <br>
             plan option for you</h2>
-            <a href="#">Read more</a>
+            <a href="Read More/read.html">Read more</a>
     </div>
     
 </section>
