--- a/Footer/CardiacSciences.html
+++ b/Footer/CardiacSciences.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cardiac Sciences Information</title>
+   <link rel="icon" type="image/x-icon" href="images/Screenshot 2023-05-17 194902.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
