--- a/Footer/DischargeProcess.html
+++ b/Footer/DischargeProcess.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <title>Hospital Discharge Process</title>
+  <link rel="icon" type="image/x-icon" href="images/Screenshot 2023-05-17 194902.png">
   <style>
     /* Add CSS styles here */
     body {
