--- a/Footer/GuidelinesForVisitors.html
+++ b/Footer/GuidelinesForVisitors.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <title>Hospital Visitor Guidelines</title>
+  <link rel="icon" type="image/x-icon" href="images/Screenshot 2023-05-17 194902.png">
   <style>
     body {
       font-family: Arial, sans-serif;
