--- a/Footer/HospitalsinIndia.html
+++ b/Footer/HospitalsinIndia.html
@@ -37,7 +37,7 @@
       color: #888;
     }
     .hospital-list li:hover{
-      background-color: black;
+      background-color: #37C3A8;
     }
      
     </style>
