--- a/Appointment_form/Online_Doctor_Appointment_Form.html
+++ b/Appointment_form/Online_Doctor_Appointment_Form.html
@@ -8,7 +8,7 @@
 <meta property="og:description" content="Please click the link to complete this form." >
 <meta name="slack-app-id" content="AHNMASS8M">
 <meta property="og:image" content="https://www.jotform.com/uploads/dhruvaggarwal2020/form_files/Screenshot%202023-05-09%20195544.645c067015d289.85164721.png" />
-<link rel="shortcut icon" href="https://cdn.jotfor.ms/assets/img/favicons/favicon-2021-light%402x.png">
+ <link rel="icon" type="image/x-icon" href="Screenshot 2023-05-17 194902.png">
 <script>
           var favicon = document.querySelector('link[rel="shortcut icon"]');
           window.isDarkMode = (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches);
