--- a/Footer/AdmissionProcess.html
+++ b/Footer/AdmissionProcess.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Hospital Admission Process</title>
-   <link rel="icon"   href="Screenshot 2023-05-17 214116.png">
+  <link rel="icon" type="image/x-icon" href="Screenshot 2023-05-17 194902.png">
   <style>
     body {
       padding: 40px;
