--- a/Footer/OnlineConsultantDoctor.html
+++ b/Footer/OnlineConsultantDoctor.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+      <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="icon" type="image/x-icon" href="images/Screenshot 2023-05-17 194902.png">
 </head>
 <body>
