--- a/Footer/HospitalsinIndia.html
+++ b/Footer/HospitalsinIndia.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Hospitals in India</title>
-  <link rel="icon" type="image/x-icon" href="images/Screenshot 2023-05-17 194902.png">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
   <style>
     body {
       font-family: Arial, sans-serif;
