--- a/Footer/GuidelinesForVisitors.html
+++ b/Footer/GuidelinesForVisitors.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-  <title>Hospital Visitor Guidelines</title>
-  <link rel="icon" type="image/x-icon" href="images/Screenshot 2023-05-17 194902.png">
+  <title>Hospital Visitor Guidelines</title><link rel="icon" type="image/x-icon" href="favicon.png">
   <style>
     body {
       font-family: Arial, sans-serif;
