--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                 <img class="d-block w-100" src="images/photo-1542644425-bc949ec841a4.avif" alt="First slide" height="650">
               </div>
               <div class="col-md-6">
-                <div class="carousel-caption slider-caption">
+                <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>First Name</h5>
                   <p>Quick Booking Of The Appointment.</p>
                 </div>
@@ -346,7 +346,7 @@
                 <img class="d-block w-100" src="images/photo-1571367034861-e6729ad9c2d5.avif" alt="Second slide" height="650">
               </div>
               <div class="col-md-6">
-                <div class="carousel-caption slider-caption">
+                <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>Second Name</h5>
                   <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
                 </div>
@@ -359,7 +359,7 @@
                 <img class="d-block w-100" src="images/photo-1589169011402-8b2cbd1ee593.avif" alt="Third slide" height="650">
               </div>
               <div class="col-md-6">
-                <div class="carousel-caption slider-caption">
+                <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>Third Name</h5>
                   <p>Thanks To This Website I Was Able To Save My Time And Money.</p>
                 </div>
@@ -372,7 +372,7 @@
                 <img class="d-block w-100" src="images/photo-1595502124338-950db27ea1c7.avif" alt="Fourth slide" height="650">
               </div>
               <div class="col-md-6">
-                <div class="carousel-caption slider-caption">
+                <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>Second Name</h5>
                   <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
                 </div>
@@ -385,7 +385,7 @@
                 <img class="d-block w-100" src="images/photo-1601317781780-646aabae8a93.avif" alt="Fifth slide" height="650">
               </div>
               <div class="col-md-6">
-                <div class="carousel-caption slider-caption">
+                <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>Second Name</h5>
                   <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
                 </div>
@@ -398,7 +398,7 @@
                 <img class="d-block w-100" src="images/photo-1607189200597-4d0923ef98c6.avif" alt="Sixth slide" height="650">
               </div>
               <div class="col-md-6">
-                <div class="carousel-caption slider-caption">
+                <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>Second Name</h5>
                   <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
                 </div>
@@ -411,7 +411,7 @@
                 <img class="d-block w-100" src="images/photo-1620324122918-6e47aa23133c.avif" alt="Seventh slide" height="650">
               </div>
               <div class="col-md-6">
-                <div class="carousel-caption slider-caption">
+                <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>Second Name</h5>
                   <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
                 </div>
