--- a/index.html
+++ b/index.html
@@ -335,7 +335,10 @@
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>First Name</h5>
-                  <p>Quick Booking Of The Appointment.</p>
+                  <p class="para">I recently used this appointment scheduling system for my child's doctor's appointment, and I'm extremely satisfied with the experience. This website made booking an appointment quick and hassle-free. I appreciated the convenience of being able to do it online, saving me time and effort.</p>
+              <p class="para">The system's highlight feature, where the reserved place is shown in yellow, was a great visual indicator that reassured me that my child's appointment was secured. It eliminated any confusion and ensured that the time slot was reserved exclusively for us.</p>
+              <p class="para">I also found the system to be flexible and user-friendly. It allowed me to easily cancel and reschedule appointments when needed, without any hassle. This level of convenience was a relief during a busy and stressful time.</p>
+              <p class="para">Overall, the smart appointment scheduling system provided a seamless and efficient way to manage my child's appointments. I would highly recommend it to other parents looking for a convenient and reliable online booking system.</p>
                 </div>
               </div>
             </div>
