--- a/index.html
+++ b/index.html
@@ -416,7 +416,11 @@
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>Second Name</h5>
-                  <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
+                 <p class="para">I recently had the urgent need to find a reliable and efficient way to book a doctor's appointment for my ill child. Thankfully, I came across this remarkable website, and it truly turned out to be a lifesaver in our time of need.</p>
+              <p class="para">The smart appointment scheduling system provided by this website made the entire process effortless and stress-free. With just a few clicks, I was able to quickly find and book an appointment with a suitable doctor who specialized in pediatric care. The convenience of being able to do everything online saved me from the hassle of making multiple phone calls or physically visiting clinics.</p>
+              <p class="para">What truly impressed me about this website was the clear and intuitive interface. The reserved time slots were visibly highlighted in yellow, which gave me peace of mind knowing that the appointment was secured for my child. It was incredibly reassuring to see that our chosen time was exclusively reserved for us, ensuring that we would receive the necessary medical attention without any delays.</p>
+              <p class="para">Moreover, the system's flexibility allowed me to easily manage and modify appointments when unexpected circumstances arose. I appreciated the convenience of being able to reschedule or cancel appointments without any complications. This level of control was invaluable during a time when my child's health was my utmost priority.</p>
+              <p class="para">Thank you to the team behind this website for creating such a valuable resource. Your dedication to improving healthcare accessibility is truly commendable.</p>
                 </div>
               </div>
             </div>
