--- a/index.html
+++ b/index.html
@@ -351,7 +351,11 @@
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>Second Name</h5>
-                  <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
+                   <p class="para">I cannot express enough how grateful I am for this website. When I was extremely ill and needed to find a doctor urgently, this system came to my rescue.</p>
+              <p class="para">Booking an appointment was incredibly easy and convenient. The website's user-friendly interface made it a breeze to navigate and find the right doctor for my condition. It saved me from the hassle of calling multiple clinics and waiting on hold.</p>
+              <p class="para">What impressed me the most was the speed at which I was able to secure an appointment. Within minutes, I had confirmed my slot and received a confirmation email with all the necessary details. This efficient process was a huge relief during a time when I needed medical attention promptly.</p>
+              <p class="para">The system's ability to show the availability of doctors in real-time was invaluable. It allowed me to compare different options and choose the most suitable one based on my preferences and urgency.</p>
+              <p class="para">Overall, I highly recommend this smart appointment scheduling system to anyone in need of quick and efficient healthcare services. It made a significant difference in my health journey, and I am grateful for the convenience it provided.</p>
                 </div>
               </div>
             </div>
