--- a/index.html
+++ b/index.html
@@ -381,7 +381,11 @@
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>Second Name</h5>
-                  <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
+                   <p class="para">I am forever indebted to the person who used this website to help me after I had an accident. The smart appointment scheduling system proved to be a true lifesaver during a time of distress.</p>
+                        <p class="para">Due to the accident, I was in a state of shock and confusion, and the person who assisted me swiftly used the website to find an emergency care provider nearby. The ability to search for immediate medical assistance in such a seamless manner was remarkable.</p>
+                        <p class="para">Within minutes, the appointment was booked, and the system provided us with the necessary information to reach the healthcare facility promptly. This efficient process alleviated a great deal of anxiety and allowed me to receive timely medical attention.</p>
+                        <p class="para">The website's intuitive interface and real-time availability of healthcare providers were instrumental in making quick and informed decisions during a critical situation. It ensured that I received the care I needed without any delays.</p>
+                        <p class="para">I cannot express my gratitude enough for the convenience and support this website provided during a challenging time. It not only facilitated the booking process but also instilled a sense of confidence in the care I was receiving. I wholeheartedly recommend this smart appointment scheduling system to anyone in need of immediate medical assistance.</p>
                 </div>
               </div>
             </div>
