--- a/index.html
+++ b/index.html
@@ -411,7 +411,11 @@
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>Second Name</h5>
-                  <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
+                  <p class="para"> This Website played a crucial role in ensuring my mother received the necessary healthcare promptly and efficiently.</p>
+                        <p class="para">The process of finding the right doctor and booking an appointment was made incredibly simple through this website. The user-friendly interface allowed me to navigate through various healthcare providers and choose the one most suitable for my mother's condition.</p>
+                        <p class="para">What impressed me the most was the system's ability to provide real-time availability of doctors. This feature allowed me to compare different options and select a doctor who could attend to my mother's needs in a timely manner.</p>
+                        <p class="para">The convenience of being able to schedule appointments online eliminated the need for multiple phone calls and lengthy wait times. It saved both time and energy, allowing me to focus on providing care and support to my ill mother.</p>
+                        <p class="para">I am incredibly grateful for the support and guidance this website offered during a challenging time. It provided a reliable and efficient platform to manage my mother's healthcare appointments, ensuring she received the best possible care. I highly recommend this smart appointment scheduling system to anyone in a similar situation.</p>
                 </div>
               </div>
             </div>
