--- a/index.html
+++ b/index.html
@@ -398,7 +398,11 @@
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
                   <h5>Second Name</h5>
-                  <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
+                  <p class="para">I am a single mother with a small daughter. One day my daughter got very ill. With no one to support i didnt know what to do. Then i suddenly remember about this website which my friend told. It provided immense support during a time when my daughter's health was a top priority.</p>
+                        <p class="para">Using this website, I was able to find specialized pediatric doctors easily and efficiently. The user-friendly interface allowed me to search for doctors in our area who had expertise in treating children. This gave me peace of mind, knowing my daughter was in capable hands.</p>
+                        <p class="para">Booking appointments was a seamless process. With just a few clicks, I could schedule appointments that fit our schedule and the urgency of my daughter's condition. This eliminated the need for lengthy phone calls and ensured we received prompt medical attention.</p>
+                        <p class="para">What impressed me the most was the website's ability to provide comprehensive information about the doctors. I could read reviews, check their qualifications, and even view their availability in real-time. This empowered me to make informed decisions for my daughter's healthcare.</p>
+                        <p class="para">This website truly made a difference in my daughter's health journey. It saved us valuable time, reduced stress, and ensured she received the best possible care. I wholeheartedly recommend this smart appointment scheduling system to any parent in need of reliable and efficient healthcare services for their children.</p>
                 </div>
               </div>
             </div>
