--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
-                  <h5>First Name</h5>
+                  <h5>Anshul Tyagi</h5>
                   <p class="para">I recently used this appointment scheduling system for my child's doctor's appointment, and I'm extremely satisfied with the experience. This website made booking an appointment quick and hassle-free. I appreciated the convenience of being able to do it online, saving me time and effort.</p>
               <p class="para">The system's highlight feature, where the reserved place is shown in yellow, was a great visual indicator that reassured me that my child's appointment was secured. It eliminated any confusion and ensured that the time slot was reserved exclusively for us.</p>
               <p class="para">I also found the system to be flexible and user-friendly. It allowed me to easily cancel and reschedule appointments when needed, without any hassle. This level of convenience was a relief during a busy and stressful time.</p>
@@ -350,7 +350,7 @@
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
-                  <h5>Second Name</h5>
+                  <h5>Ayush Pal</h5>
                    <p class="para">I cannot express enough how grateful I am for this website. When I was extremely ill and needed to find a doctor urgently, this system came to my rescue.</p>
               <p class="para">Booking an appointment was incredibly easy and convenient. The website's user-friendly interface made it a breeze to navigate and find the right doctor for my condition. It saved me from the hassle of calling multiple clinics and waiting on hold.</p>
               <p class="para">What impressed me the most was the speed at which I was able to secure an appointment. Within minutes, I had confirmed my slot and received a confirmation email with all the necessary details. This efficient process was a huge relief during a time when I needed medical attention promptly.</p>
@@ -367,7 +367,7 @@
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
-                  <h5>Third Name</h5>
+                  <h5>Jayanti Uniyal</h5>
                    <p class="para">As a concerned mother, I want to express my heartfelt gratitude to this website and its smart appointment scheduling system. It was a true blessing when my daughter suddenly developed a high fever, and I needed immediate medical assistance.</p>
                         
                         <p class="para">Booking an appointment was a seamless process that saved us precious time. With just a few clicks, I secured an appointment with a pediatrician who could attend to my daughter's urgent needs. The system provided confirmation details and timely reminders, ensuring we didn't miss the appointment.</p>
@@ -384,7 +384,7 @@
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
-                  <h5>Second Name</h5>
+                  <h5>Atrey Singh</h5>
                    <p class="para">I am forever indebted to the person who used this website to help me after I had an accident. The smart appointment scheduling system proved to be a true lifesaver during a time of distress.</p>
                         <p class="para">Due to the accident, I was in a state of shock and confusion, and the person who assisted me swiftly used the website to find an emergency care provider nearby. The ability to search for immediate medical assistance in such a seamless manner was remarkable.</p>
                         <p class="para">Within minutes, the appointment was booked, and the system provided us with the necessary information to reach the healthcare facility promptly. This efficient process alleviated a great deal of anxiety and allowed me to receive timely medical attention.</p>
@@ -401,7 +401,7 @@
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
-                  <h5>Second Name</h5>
+                  <h5>Gitanjali Devi</h5>
                   <p class="para">I am a single mother with a small daughter. One day my daughter got very ill. With no one to support i didnt know what to do. Then i suddenly remember about this website which my friend told. It provided immense support during a time when my daughter's health was a top priority.</p>
                         <p class="para">Using this website, I was able to find specialized pediatric doctors easily and efficiently. The user-friendly interface allowed me to search for doctors in our area who had expertise in treating children. This gave me peace of mind, knowing my daughter was in capable hands.</p>
                         <p class="para">Booking appointments was a seamless process. With just a few clicks, I could schedule appointments that fit our schedule and the urgency of my daughter's condition. This eliminated the need for lengthy phone calls and ensured we received prompt medical attention.</p>
@@ -417,7 +417,7 @@
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
-                  <h5>Second Name</h5>
+                  <h5>Simran Sharma</h5>
                   <p class="para"> This Website played a crucial role in ensuring my mother received the necessary healthcare promptly and efficiently.</p>
                         <p class="para">The process of finding the right doctor and booking an appointment was made incredibly simple through this website. The user-friendly interface allowed me to navigate through various healthcare providers and choose the one most suitable for my mother's condition.</p>
                         <p class="para">What impressed me the most was the system's ability to provide real-time availability of doctors. This feature allowed me to compare different options and select a doctor who could attend to my mother's needs in a timely manner.</p>
@@ -434,7 +434,7 @@
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption" style="left: 30%;">
-                  <h5>Second Name</h5>
+                  <h5>Aslam Khadir</h5>
                  <p class="para">I recently had the urgent need to find a reliable and efficient way to book a doctor's appointment for my ill child. Thankfully, I came across this remarkable website, and it truly turned out to be a lifesaver in our time of need.</p>
               <p class="para">The smart appointment scheduling system provided by this website made the entire process effortless and stress-free. With just a few clicks, I was able to quickly find and book an appointment with a suitable doctor who specialized in pediatric care. The convenience of being able to do everything online saved me from the hassle of making multiple phone calls or physically visiting clinics.</p>
               <p class="para">What truly impressed me about this website was the clear and intuitive interface. The reserved time slots were visibly highlighted in yellow, which gave me peace of mind knowing that the appointment was secured for my child. It was incredibly reassuring to see that our chosen time was exclusively reserved for us, ensuring that we would receive the necessary medical attention without any delays.</p>
